objects/nFORCE__Data_Store__c.object
<CustomObject>
    <fields>
        <fullName>nFORCE__Average__c</fullName>
        <description>Use this field if the underlying analytic data reports on average.</description>
        <inlineHelpText>Average is an Arithmetic mean of values. Use this field if the underlying analytic reports on average.</inlineHelpText>
        <label>Average</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Count__c</fullName>
        <description>Use this field if the underlying analytic data reports on count.</description>
        <inlineHelpText>Use this field if the underlying analytic data reports on count. Count is a count of data fields</inlineHelpText>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Currency_10__c</fullName>
        <description>This field is not user facing. This field is used for data storage for the CUSO and Business Intelligence features.</description>
        <label>Currency 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFORCE__Currency_1__c</fullName>
        <description>This field is not user facing. This field is used for data storage for the CUSO and Business Intelligence features.</description>
        <label>Currency 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFORCE__Currency_2__c</fullName>
        <description>This field is not user facing. This field is used for data storage for the CUSO and Business Intelligence features.</description>
        <label>Currency 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nFORCE__Data_Source_Id__c</fullName>
        <description>data source ID property</description>
        <externalId>true</externalId>
        <inlineHelpText>data source ID property</inlineHelpText>
        <label>Data Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Data_Source_Name__c</fullName>
        <description>Data Source Name is the name of the child org as specified in Setup-&gt;Company Profile-&gt;Company Information-&gt;Organization Name.</description>
        <externalId>true</externalId>
        <inlineHelpText>A string that has an associated data structure used to describe a connection to a data source.</inlineHelpText>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Data_Source__c</fullName>
        <description>Data Source will be &quot;Salesforce Org&quot; for analytics as all data comes from child orgs.  The Data Store object, however, is generic enough to hold data from additional sources such as the FDIC.</description>
        <inlineHelpText>Data Source will be &quot;Salesforce Org&quot; for analytics as all data comes from child orgs.  The Data Store object, however, is generic enough to hold data from additional sources such as the FDIC.</inlineHelpText>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Org</fullName>
                    <default>true</default>
                    <label>Salesforce Org</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__DateTime_10__c</fullName>
        <description>A DateTime field used for grouping.</description>
        <inlineHelpText>A DateTime field used for grouping.</inlineHelpText>
        <label>DateTime 10</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFORCE__DateTime_1__c</fullName>
        <description>A DateTime field used for grouping.</description>
        <inlineHelpText>A DateTime field used for grouping.</inlineHelpText>
        <label>DateTime 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFORCE__DateTime_2__c</fullName>
        <description>A DateTime field used for grouping.</description>
        <inlineHelpText>A DateTime field used for grouping.</inlineHelpText>
        <label>DateTime 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFORCE__Decimal_10__c</fullName>
        <description>This field is not user facing. This field is used for data storage for the CUSO and Business Intelligence features.</description>
        <label>Decimal 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Decimal_1__c</fullName>
        <description>This field is not user facing. This field is used for data storage for the CUSO and Business Intelligence features.</description>
        <label>Decimal 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Decimal_2__c</fullName>
        <description>This field is not user facing. This field is used for data storage for the CUSO and Business Intelligence features.</description>
        <label>Decimal 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__End_Date__c</fullName>
        <description>End of the timeframe for the captured data.  If the aggregate data is captured daily, the start and end dates will be the same date.  If the aggregate data is for one week, the start and end date would be a week apart.</description>
        <inlineHelpText>End of the timeframe for the captured data.  If the aggregate data is captured daily, the start and end dates will be the same date.  If the aggregate data is for one week, the start and end date would be a week apart.</inlineHelpText>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFORCE__Grouping_1__c</fullName>
        <description>The primary grouping of aggregate data.  If the aggregate data related to logins by role, grouping 1 might be &quot;CEO&quot;.  Note: this will be null if the aggregate is a grant total...such as total loan count.</description>
        <inlineHelpText>Fields may be grouped into measures and dimensions.</inlineHelpText>
        <label>Grouping 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Grouping_2__c</fullName>
        <description>The secondary grouping of the aggregate data.</description>
        <inlineHelpText>Fields may be grouped into measures and dimensions.</inlineHelpText>
        <label>Grouping 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Grouping_3__c</fullName>
        <description>The third grouping of the aggregate data.</description>
        <inlineHelpText>Fields may be grouped into measures and dimensions.</inlineHelpText>
        <label>Grouping 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Dirty__c</fullName>
        <description>Dirty?</description>
        <formula>OR(ISNULL(nFORCE__Send_Date_Time__c),LastModifiedDate &gt; nFORCE__Send_Date_Time__c)</formula>
        <inlineHelpText>Formula to determine if dirty</inlineHelpText>
        <label>Is Dirty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Max__c</fullName>
        <description>Use this field if the underlying analytic data reports on max.</description>
        <inlineHelpText>Max is the Largest Value. Use this field if the underlying analytic data reports on max.</inlineHelpText>
        <label>Max</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Min__c</fullName>
        <description>Use this field if the underlying analytic data reports on min.</description>
        <inlineHelpText>Min is the Smallest Value. Use this field if the underlying analytic data reports on min.</inlineHelpText>
        <label>Min</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Number_10__c</fullName>
        <description>A number field used for grouping.</description>
        <inlineHelpText>A number field used for grouping.</inlineHelpText>
        <label>Number 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Number_11__c</fullName>
        <description>A number field used for grouping.</description>
        <inlineHelpText>A number field used for grouping.</inlineHelpText>
        <label>Number 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Number_12__c</fullName>
        <description>A number field used for grouping.</description>
        <inlineHelpText>A number field used for grouping.</inlineHelpText>
        <label>Number 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Percent_10__c</fullName>
        <description>This field is not user facing. This field is used for data storage for the CUSO and Business Intelligence features.</description>
        <label>Percent 10</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nFORCE__Percent_1__c</fullName>
        <description>This field is not user facing. This field is used for data storage for the CUSO and Business Intelligence features.</description>
        <label>Percent 1</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nFORCE__Percent_2__c</fullName>
        <description>This field is not user facing. This field is used for data storage for the CUSO and Business Intelligence features.</description>
        <label>Percent 2</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nFORCE__Send_Date_Time__c</fullName>
        <description>Send date and time</description>
        <inlineHelpText>Send date and time</inlineHelpText>
        <label>Send Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFORCE__Start_Date__c</fullName>
        <description>The beginning of the timeframe for the captured data.</description>
        <inlineHelpText>The beginning of the timeframe for the captured data.</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFORCE__Sum__c</fullName>
        <description>Use this field if the underlying analytic data reports on sum.</description>
        <inlineHelpText>Use this field if the underlying analytic data reports on sum. Sum is an additive function.</inlineHelpText>
        <label>Sum</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Tags__c</fullName>
        <description>A predefined list to assist in filtering on reports.</description>
        <inlineHelpText>A predefined list to assist in filtering on reports.</inlineHelpText>
        <label>Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Analytics</fullName>
                </value>
                <value>
                    <fullName>Login Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Text_10__c</fullName>
        <description>A text field used for grouping.</description>
        <inlineHelpText>A text field used for grouping.</inlineHelpText>
        <label>Text 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Text_11__c</fullName>
        <description>A text field used for grouping.</description>
        <inlineHelpText>A text field used for grouping.</inlineHelpText>
        <label>Text 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Text_12__c</fullName>
        <description>A text field used for grouping.</description>
        <inlineHelpText>A text field used for grouping.</inlineHelpText>
        <label>Text 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Timestamp__c</fullName>
        <description>Timestamp is the time the analytic snapshot ran on the child org.</description>
        <inlineHelpText>Timestamp is the time the analytic snapshot ran on the child org.</inlineHelpText>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFORCE__Unique_Name__c</fullName>
        <description>Name of the analytic snapshot that captured the original data.  Examples may be something like &quot;Daily Login Count&quot;, &quot;Total Loan Count&quot;, etc...  You will use this unique name to filter down the data when reporting.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique name for the data store that is a name of the analytic snapshot that captured the original data.  Examples may be something like &quot;Daily Login Count&quot;, &quot;Total Loan Count&quot;, etc...  You will use this unique name to filter down the data when reporting.</inlineHelpText>
        <label>Unique Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Value__c</fullName>
        <description>A generic value.  This will likely not be used in user analytics, but could be used if capturing data from the FDIC or another source.</description>
        <inlineHelpText>Data store value is a generic value.  This will likely not be used in user analytics, but could be used if capturing data from the FDIC or another source.</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm).</description>
        <externalId>true</externalId>
        <inlineHelpText>Key for query joining the base table and lookup table.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Data Store</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Unique_Name__c</columns>
        <columns>nFORCE__Count__c</columns>
        <columns>nFORCE__Max__c</columns>
        <columns>nFORCE__Min__c</columns>
        <columns>nFORCE__Average__c</columns>
        <columns>nFORCE__Sum__c</columns>
        <columns>nFORCE__Value__c</columns>
        <columns>nFORCE__Grouping_1__c</columns>
        <columns>nFORCE__Grouping_2__c</columns>
        <columns>nFORCE__Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>nFORCE__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DS-{0000000000}</displayFormat>
        <label>Data Store Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>